tests/syntax/good/expr_field3.c

void f(){

*(3+x).y;
}

