tests/syntax/bad/expr_field_fail1.c

void f(){

x.3;
}

